fix spacing issues in layout

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,3 +11,14 @@
 .page-content {
   padding: 20px;
 }
+
+.notice {
+  color: green;
+}
+
+.alert {
+  color: yellow;
+  opacity: 1;
+  -webkit-transition: opacity 1000ms linear;
+  transition: opacity 1000ms linear;
+}
